# hive

./: .gitignore  README.md  Taskfile.yml  docker-compose.yml
api/: Cargo.toml  Dockerfile  diesel.toml
api/migrations/2023-08-22-200805_nanoid/: down.sql  up.sql
api/migrations/2023-08-22-203915_users/: up.sql
api/migrations/2023-08-22-203920_roles/: down.sql  up.sql
api/migrations/2023-08-22-204429_devices/: down.sql  up.sql
api/migrations/2023-08-22-204433_firmwares/: down.sql  up.sql
api/migrations/2023-08-29-211819_access_token/: down.sql  up.sql
api/src/: main.rs  state.rs
api/src/dtos/: auth.rs  device.rs  firmware.rs  mod.rs  user.rs
api/src/entities/: access_token.rs  authority.rs  device.rs  mod.rs  pagination.rs  role.rs  session.rs  user.rs
api/src/exceptions/: api.rs  cache.rs  config.rs  db.rs  encrypt.rs  mod.rs  parsing.rs  session.rs  validation.rs
api/src/extractors/: mod.rs  req_authority.rs  req_box.rs  req_cache.rs  req_config.rs  req_db.rs  req_dto.rs  req_encrypt.rs  req_queries.rs
api/src/handlers/: auth_handler.rs  devices_handler.rs  firmware_handler.rs  handler.rs  mod.rs  system_handler.rs  user_handler.rs
api/src/models/: access_token.rs  device.rs  generated_db.rs  mod.rs  role.rs  user.rs
api/src/providers/: cache.rs  config.rs  db.rs  encrypt.rs  mod.rs
api/src/repositories/: access_token_repo.rs  device_repo.rs  mod.rs  role_repo.rs  user_repo.rs
api/src/services/: auth_service.rs  device_service.rs  mod.rs  user_service.rs
api/src/templates/: access_token.rs  auth.rs  device.rs  mod.rs  template.rs  user.rs
(+7 files in other folders)
