[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["postgres", "chrono", "serde_json", "postgres_backend", "r2d2"] }
chrono = { version = "0.4.26", features = ["serde"] }
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
r2d2 = "0.8.10"
dotenvy = "0.15.7"

actix-web = "4.3.1"
actix-cors = "0.6.4"
actix-session = {version= "0.7.2", features = ["redis-rs-session"]}

futures = "0.3.28"
validator = {version = "0.16.1", features = ["derive"]}
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
envy = "0.4.2"
env_logger = "0.10.0"
tracing-actix-web = "0.7.5"
tracing = "0.1.37"

bcrypt = "0.15.0"

redis = { version = "0.23.1", features = ["tokio-comp", "json"] }
redis-async-pool = "0.2.4"
redis-macros = "0.2.1"
nanoid = "0.4.0"

magic-crypt = "3.1.12"
